--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,48 +1,58 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 
 body {
-    background: #222;
-    /*background-image: url('https://source.unsplash.com/1600x900/?landscape');*/
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    height: 100vh;
+  background: #222;
+  /*background-image: url('https://source.unsplash.com/1600x900/?landscape');*/
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  height: 100vh;
 }
 
 .weather {
-    background: #000000d0;
-    color: white;
-    padding: 1.5em;
-    border-radius: 20px;
-    width: 100%;
-    max-width: 640px;
-    margin: 1em;
-  }
+  background: #000000d0;
+  color: white;
+  padding: 1.5em;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 640px;
+  margin: 1em;
+}
 
 .searchHistory {
-    background: #000000d0;
-    color: white;
-    padding: 1.5em;
-    border-radius: 20px;
-    width: 100%;
-    max-width: 640px;
-    margin: 1em;
-  }
+  background: #000000d0;
+  color: white;
+  padding: 1.5em;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 640px;
+  margin: 1em;
+}
 
-  button {
-    margin: 0;
-    border-radius: 4px;
-    outline: none;
-    background: #7c7c7c2b;
-    color: white;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-  }
-  button:hover {
-    background: #7c7c7c6b;
-  }
+button {
+  margin: 0;
+  border-radius: 4px;
+  outline: none;
+  background: #7c7c7c2b;
+  color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+button:hover {
+  background: #7c7c7c6b;
+}
+
+input.searchBar {
+  border: none;
+  outline: none;
+  padding: 0.4em 1em;
+  border-radius: 24px;
+  background: #7c7c7c2b;
+  color: white;
+}
