--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,12 +6,8 @@
 body {
   background: #222;
   /*background-image: url('https://source.unsplash.com/1600x900/?landscape');*/
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
   height: 100vh;
+  margin: 0 auto;
 }
 
 .weather {
@@ -19,8 +15,24 @@ body {
   color: white;
   padding: 1.5em;
   border-radius: 20px;
+  max-width: 475px;
+  margin: 1em;
+
+}
+
+.weatherContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.weatherPage {
+  background: #000000d0;
+  color: white;
+  padding: 1.5em;
+  border-radius: 20px;
   width: 100%;
-  max-width: 640px;
+  max-width: 475px;
   margin: 1em;
 }
 
