--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,7 +5,7 @@
 
 body {
   background: #222;
-  /*background-image: url('https://source.unsplash.com/1600x900/?landscape');*/
+  background-image: url('https://source.unsplash.com/1600x900/?landscape');
   height: 100vh;
   margin: 0 auto;
   display:flex;
@@ -17,6 +17,7 @@ body {
   padding: 1.5em;
   border-radius: 20px;
   max-width: 475px;
+  max-height: 250px;
   margin: 1em;
 
 }
@@ -48,13 +49,14 @@ body {
 }
 
 button {
-  margin: 0;
+  margin: 10px;
   border-radius: 4px;
   outline: none;
   background: #7c7c7c2b;
   color: white;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+  display: flex;
 }
 
 button:hover {
